web: fix overlapping elements on index lab tests
GitHub: fixes #295

--- a/web/priv/static/css/app.css
+++ b/web/priv/static/css/app.css
@@ -207,7 +207,14 @@ TODO:
     .search-results {
         & {
             position: absolute;
-            z-index: 1; /* put above page elements, otherwise gets mixed up with page text */
+            /* NOTE(Vincent 2024-11-18)  The table header of the page "Index of lab tests" has a
+            z-index of 1, so by default this table header will display on top of the search
+            results.
+            For now I set the z-index to 2 on the search results to make it appear on top, but
+            a better solution would be to rework the table of Index of lab tests to make the
+            z-index unecessary.
+            */
+            z-index: 2;
             color: black;
             background: white;
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
